--- a/JenkinsFile
+++ b/JenkinsFile
@@ -1,9 +1,9 @@
 pipeline {
-    agent any  // Exécute sur n'importe quel agent Jenkins
+    agent any
     
     tools {
-        maven 'M2_HOME'  // Utilise Maven configuré dans Jenkins
-        jdk 'JAVA_HOME'  // Utilise Java configuré dans Jenkins
+        maven 'M2_HOME'
+        jdk 'JAVA_HOME'
     }
     
     stages {
@@ -20,7 +20,7 @@ pipeline {
                 sh 'mvn clean'
             }
         }
-      
+        
         stage('Compile') {
             steps {
                 echo '⚙️ Compilation...'
@@ -30,26 +30,23 @@ pipeline {
         
         stage('Test') {
             steps {
-                echo '🧪 Exécution des tests...'
+                echo '🧪 Tests...'
                 sh 'mvn test'
             }
         }
         
         stage('Package') {
             steps {
-                echo '📦 Création du fichier JAR...'
+                echo '📦 Création du JAR...'
                 sh 'mvn package'
-                echo '✅ JAR créé dans target/'
-                sh 'ls -lh target/*.jar'  
             }
         }
     }
     
     post {
         success {
-            echo '🎉 Build réussi !'
-            archiveArtifacts artifacts: '**/target/*.jar', 
-                           fingerprint: true
+            echo '✅ Build réussi !'
+            archiveArtifacts artifacts: '**/target/*.jar', allowEmptyArchive: true
         }
         failure {
             echo '❌ Build échoué !'
